--- a/RikkiFlashCards/Views/Deck/Edit.cshtml
+++ b/RikkiFlashCards/Views/Deck/Edit.cshtml
@@ -31,7 +31,7 @@
 </div>
 
 <div>
-    <a asp-controller="Deck" asp-action="Index" asp-route-ResourceId="@Model.ResourceId">Back to Decks</a>
+    <a asp-controller="Deck" asp-action="Index" asp-route-ParentId="@Model.ResourceId">Back to Decks</a>
 </div>
 
 @section Scripts {
