--- a/RikkiFlashCards/Views/Deck/View.cshtml
+++ b/RikkiFlashCards/Views/Deck/View.cshtml
@@ -65,5 +65,5 @@
     @Html.ActionLink("Edit", "Edit", new { Deckid = Model.DeckId }) |
     <a asp-controller="Deck" asp-action="Revise" asp-route-DeckId="@Model.DeckId">Revise</a> |
     <a asp-controller="Deck" asp-action="Quiz" asp-route-DeckId="@Model.DeckId">Quiz</a> |
-    <a asp-controller="Deck" asp-action="Index" asp-route-ResourceId="@Model.ResourceId">Back to Decks</a>
+    <a asp-controller="Deck" asp-action="Index" asp-route-ParentId="@Model.ResourceId">Back to Decks</a>
 </div>
