--- a/RikkiFlashCards/Views/Card/Index.cshtml
+++ b/RikkiFlashCards/Views/Card/Index.cshtml
@@ -13,7 +13,7 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" asp-controller="Deck" asp-action="Index" asp-route-ResourceId="@Model.ResourceId">Back to Decks</a>
+                <a class="nav-link" asp-controller="Deck" asp-action="Index" asp-route-ParentId="@Model.ResourceId">Back to Decks</a>
             </li>
         </ul>
     </div>
