--- a/RikkiFlashCards/Views/Deck/Create.cshtml
+++ b/RikkiFlashCards/Views/Deck/Create.cshtml
@@ -29,7 +29,7 @@
     </div>
 </div>
 <div>
-    <a asp-controller="Resource" asp-action="Index" asp-route-SubjectId="@Model.SubjectId">Back to Resources</a>
+    <a asp-controller="Resource" asp-action="Index" asp-route-ParentId="@Model.SubjectId">Back to Resources</a>
 </div>
 
 @section Scripts {
