--- a/RikkiFlashCards/Views/Resource/Create.cshtml
+++ b/RikkiFlashCards/Views/Resource/Create.cshtml
@@ -41,7 +41,7 @@
 </div>
 
 <div>
-    <a asp-action="Index" asp-route-SubjectId="@Model.SubjectId">Back to List</a>
+    <a asp-action="Index" asp-route-ParentId="@Model.SubjectId">Back to List</a>
 </div>
 
 @section Scripts {
