--- a/RikkiFlashCards/Views/Resource/Edit.cshtml
+++ b/RikkiFlashCards/Views/Resource/Edit.cshtml
@@ -46,7 +46,7 @@
 </div>
 
 <div>
-    <a asp-controller="Resource" asp-action="Index" asp-route-SubjectId="@Model.SubjectId">Back to List</a>
+    <a asp-controller="Resource" asp-action="Index" asp-route-ParentId="@Model.SubjectId">Back to List</a>
 </div>
 
 @section Scripts {
