- Added Custom link tag and corresponding encoding

--- a/RikkiFlashCards/Views/Card/Edit.cshtml
+++ b/RikkiFlashCards/Views/Card/Edit.cshtml
@@ -14,19 +14,19 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             @Html.HiddenFor(m => m.CardId)
         <div class="form-group">
-                <label asp-for="Front" class="control-label"></label>
-                <input type="button" class="btn btn-sm btn-outline-info" value="<Code>" onclick="addXMP('@Html.IdFor(m=>m.Front)')" />
-                @Html.TextAreaFor(x => x.Front, 5, 500, htmlAttributes: new { style = "max-width: 100%;" })
-                <span asp-validation-for="Front" class="text-danger"></span>
-                <input type="button" class="btn btn-sm btn-outline-info" value="<Code>" onclick="addXMP('@Html.IdFor(m=>m.Front)')" />
+            <label asp-for="Front" class="control-label"></label>
+            <input type="button" class="btn btn-sm btn-outline-info" value="<Code>" onclick="addCodeTag('@Html.IdFor(m=>m.Front)')" />
+            <input type="button" class="btn btn-sm btn-outline-primary" value="[Link]" onclick="addCustomLinkTag('@Html.IdFor(m=>m.Front)')" />
+            @Html.TextAreaFor(x => x.Front, 5, 500, htmlAttributes: new { style = "max-width: 100%;" })
+            <span asp-validation-for="Front" class="text-danger"></span>
         </div>
-            <div class="form-group">
-                <label asp-for="Back" class="control-label"></label>
-                <input type="button" class="btn btn-sm btn-outline-info" value="<Code>" onclick="addXMP('@Html.IdFor(m=>m.Back)')" />
-                @Html.TextAreaFor(x => x.Back, 15, 500, htmlAttributes: new { style = "max-width: 100%;" })
-                <span asp-validation-for="Back" class="text-danger"></span>
-                <input type="button" class="btn btn-sm btn-outline-info" value="<Code>" onclick="addXMP('@Html.IdFor(m=>m.Back)')" />
-            </div>
+        <div class="form-group">
+            <label asp-for="Back" class="control-label"></label>
+            <input type="button" class="btn btn-sm btn-outline-info" value="<Code>" onclick="addCodeTag('@Html.IdFor(m=>m.Back)')" />
+            <input type="button" class="btn btn-sm btn-outline-primary" value="[Link]" onclick="addCustomLinkTag('@Html.IdFor(m=>m.Back)')" />
+            @Html.TextAreaFor(x => x.Back, 15, 500, htmlAttributes: new { style = "max-width: 100%;" })
+            <span asp-validation-for="Back" class="text-danger"></span>
+        </div>
             <div class="form-group">
                 <label asp-for="Level" class="control-label"></label>
                 <select asp-for="Level" asp-items="@Html.GetEnumSelectList<AnkiFlashCards.Models.Domain.DifficultyLevel>()"></select>
