--- a/RikkiFlashCards/Views/Card/Create.cshtml
+++ b/RikkiFlashCards/Views/Card/Create.cshtml
@@ -17,16 +17,18 @@
           
         <div class="form-group">
             <label asp-for="Front" class="control-label"></label>
-            <input type="button" class="btn btn-sm btn-outline-info" value="<Code>" onclick="addXMP('@Html.IdFor(m=>m.Front)')" />
-            @Html.TextAreaFor(x => x.Front, 5,500, htmlAttributes: new {style="max-width: 100%;", @Value="What is .. ?" })
+            <input type="button" class="btn btn-sm btn-outline-info" value="<Code>" onclick="addCodeTag('@Html.IdFor(m=>m.Front)')" />
+            <input type="button" class="btn btn-sm btn-outline-primary" value="[Link]" onclick="addCustomLinkTag('@Html.IdFor(m=>m.Front)')" />
+            @Html.TextAreaFor(x => x.Front, 5, 500, htmlAttributes: new { style = "max-width: 100%;", @Value = "What is .. ?" })
             <span asp-validation-for="Front" class="text-danger"></span>
         </div>
-            <div class="form-group">
-                <label asp-for="Back" class="control-label"></label>
-                <input type="button" class="btn btn-sm btn-outline-info" value="<Code>" onclick="addXMP('@Html.IdFor(m=>m.Back)')" />
-                @Html.TextAreaFor(x => x.Back, 10,500, htmlAttributes: new {style="max-width: 100%;" })
-                <span asp-validation-for="Back" class="text-danger"></span>
-            </div>
+        <div class="form-group">
+            <label asp-for="Back" class="control-label"></label>
+            <input type="button" class="btn btn-sm btn-outline-info" value="<Code>" onclick="addCodeTag('@Html.IdFor(m=>m.Back)')" />
+            <input type="button" class="btn btn-sm btn-outline-primary" value="[Link]" onclick="addCustomLinkTag('@Html.IdFor(m=>m.Back)')" />
+            @Html.TextAreaFor(x => x.Back, 10, 500, htmlAttributes: new { style = "max-width: 100%;" })
+            <span asp-validation-for="Back" class="text-danger"></span>
+        </div>
             <div class="form-group">
                 <label asp-for="Level" class="control-label"></label>
                 <select asp-for="Level" asp-items="Html.GetEnumSelectList<AnkiFlashCards.Models.Domain.DifficultyLevel>()"></select>
