--- a/RikkiFlashCards/Views/Shared/_Layout.cshtml
+++ b/RikkiFlashCards/Views/Shared/_Layout.cshtml
@@ -33,46 +33,6 @@
     * Author: BootstrapMade.com
     * License: https://bootstrapmade.com/license/
     ======================================================== -->
-    <script>
-        var isTagOpened = false;
-
-        function addCodeTag(elementId) {
-            var curElementVal = document.getElementById(elementId).value;
-            var appendForwardNL = (curElementVal.length > 0)?("\r\n"): ("");
-            document.getElementById(elementId).value += appendForwardNL + "<code>\r\n\r\n</code>\r\n";
-        }
-
-        function addCustomLinkTag(elementId) {
-            var curElementVal = document.getElementById(elementId).value;
-            var appendForwardNL = (curElementVal.length > 0)?("\r\n"): ("");
-            document.getElementById(elementId).value += " [link][/link]";
-        }
-
-        function stripBRtoRN() {
-            var codeBlocks = document.getElementsByName("codeBlock");
-            codeBlocks.forEach(x => {
-                x.innerHTML = x.innerHTML.replace(/<br>/g, "\r\n");
-                x.innerHTML = escapeHtml(x.innerHTML);
-            });
-
-        }
-
-        function escapeHtml(text) {
-        alert('text input ' + text)
-            var map = {
-            '&': '&amp;',
-            '<': '&lt;',
-            '>': '&gt;',
-            '"': '&quot;',
-            "'": '&#039;'
-            };
-
-            //var replacedText = text.replace(/[&<>"']/g, function (m) { alert('found: ' + m); alert('replaced with: ' + map[m]); return map[m]; });
-            var replacedText = text.replace(/[&<>"']/g, function (m) { return map[m]; });
-            alert('text output ' + replacedText);
-            return replacedText;
-        }
-    </script>
 </head>
 
 <body>
@@ -142,6 +102,7 @@
     <script src="~/vendor/aos/aos.js"></script>
     <!-- Template Main JS File -->
     <script src="~/js/main.js"></script>
+    <script src="~/js/RikkiFCCustom.js"></script>
     @RenderSection("Scripts", required: false)
 
 </body>
