--- a/RikkiFlashCards/Views/_ViewImports.cshtml
+++ b/RikkiFlashCards/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using AnkiFlashCards
 @using AnkiFlashCards.Models
+@using Microsoft.AspNetCore.Http
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
