--- a/RikkiFlashCards/Views/Card/ViewExam.cshtml
+++ b/RikkiFlashCards/Views/Card/ViewExam.cshtml
@@ -74,7 +74,7 @@
                 </span>
             }
             <hr />
-            <span id="BackId" style="color:blueviolet;font-family:ABeeZee;font-display:block;font-size:medium; visibility:visible">
+            <span id="BackId" style="color:cornflowerblue;font-family:ABeeZee;font-display:block;font-size:medium; visibility:visible">
                 @Html.Raw(@Model.Back)
             </span>
             @if (Model.IsExam)
