--- a/RikkiFlashCards/Views/Card/View.cshtml
+++ b/RikkiFlashCards/Views/Card/View.cshtml
@@ -28,7 +28,7 @@
             @Html.DisplayNameFor(model => model.Back)
         </dt>
         <dd class="col-sm-12">
-            <span id="BackId" style="color:blueviolet;font-family:ABeeZee;font-display:block;font-size:medium; visibility:visible">
+            <span id="BackId" style="color:cornflowerblue;font-family:ABeeZee;font-display:block;font-size:medium; visibility:visible">
                 @Html.Raw(@Model.Back)
             </span>
         </dd>
