--- a/RikkiFlashCards/Views/Shared/_Layout.cshtml
+++ b/RikkiFlashCards/Views/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
     * Author: BootstrapMade.com
     * License: https://bootstrapmade.com/license/
     ======================================================== -->
+    <script src="~/vendor/jquery/jquery.min.js"></script>
     <script src="~/js/RikkiFCCustom.js"></script>
 </head>
 
@@ -92,8 +93,8 @@
 
     <!-- CDN link for google prettify, to enable displaying c-sharp code in browser -->
     <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
+    <script src="~/js/AfterPageLoad.js"></script>
     <!-- Vendor JS Files -->
-    <script src="~/vendor/jquery/jquery.min.js"></script>
     <script src="~/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="~/vendor/jquery.easing/jquery.easing.min.js"></script>
     <script src="~/vendor/php-email-form/validate.js"></script>
@@ -103,7 +104,7 @@
     <script src="~/vendor/aos/aos.js"></script>
     <!-- Template Main JS File -->
     <script src="~/js/main.js"></script>
-    
+
     @RenderSection("Scripts", required: false)
 
 </body>
