--- a/RikkiFlashCards/Views/Card/Create.cshtml
+++ b/RikkiFlashCards/Views/Card/Create.cshtml
@@ -11,26 +11,33 @@
 <hr />
 <div class="row">
     <div class="col-md-12 col-xs-12 col-sm-12">
-        <form asp-action="Create">
+        @using (Html.BeginForm("Create","Card",FormMethod.Post, new { enctype = "multipart/form-data"}))
+        {
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             @Html.HiddenFor(m => m.DeckId)
           
-        <div class="form-group">
-            <label asp-for="Front" class="control-label"></label>
-            <input type="button" class="btn btn-sm btn-outline-info" value="<Code>" onclick="addCodeTag('@Html.IdFor(m=>m.Front)')" />
-            <input type="button" class="btn btn-sm btn-outline-primary" value="[Link]" onclick="addCustomLinkTag('@Html.IdFor(m=>m.Front)')" />
-            <input type="button" class="btn btn-sm btn-outline-secondary" value="[Bold]" onclick="addCustomBoldTag('@Html.IdFor(m=>m.Front)')" />
-            @Html.TextAreaFor(x => x.Front, 5, 500, htmlAttributes: new { style = "max-width: 100%;", @Value = "What is .. ?" })
-            <span asp-validation-for="Front" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="Back" class="control-label"></label>
-            <input type="button" class="btn btn-sm btn-outline-info" value="<Code>" onclick="addCodeTag('@Html.IdFor(m=>m.Back)')" />
-            <input type="button" class="btn btn-sm btn-outline-primary" value="[Link]" onclick="addCustomLinkTag('@Html.IdFor(m=>m.Back)')" />
-            <input type="button" class="btn btn-sm btn-outline-secondary" value="[Bold]" onclick="addCustomBoldTag('@Html.IdFor(m=>m.Back)')" />
-            @Html.TextAreaFor(x => x.Back, 10, 500, htmlAttributes: new { style = "max-width: 100%;" })
-            <span asp-validation-for="Back" class="text-danger"></span>
-        </div>
+            <div class="form-group">
+                <label asp-for="Front" class="control-label"></label>
+                <input type="button" class="btn btn-sm btn-outline-info" value="<Code>" onclick="addCodeTag('@Html.IdFor(m=>m.Front)')" />
+                <input type="button" class="btn btn-sm btn-outline-primary" value="[Link]" onclick="addCustomLinkTag('@Html.IdFor(m=>m.Front)')" />
+                <input type="button" class="btn btn-sm btn-outline-secondary" value="[Bold]" onclick="addCustomBoldTag('@Html.IdFor(m=>m.Front)')" />
+                @Html.TextAreaFor(x => x.Front, 5, 500, htmlAttributes: new { style = "max-width: 100%;", @Value = "What is .. ?" })
+                <span asp-validation-for="Front" class="text-danger"></span>
+            </div>        
+            <div class="form-group">
+                <label asp-for="Back" class="control-label"></label>
+                <input type="button" class="btn btn-sm btn-outline-info" value="<Code>" onclick="addCodeTag('@Html.IdFor(m=>m.Back)')" />
+                <input type="button" class="btn btn-sm btn-outline-primary" value="[Link]" onclick="addCustomLinkTag('@Html.IdFor(m=>m.Back)')" />
+                <input type="button" class="btn btn-sm btn-outline-secondary" value="[Bold]" onclick="addCustomBoldTag('@Html.IdFor(m=>m.Back)')" />
+                @Html.TextAreaFor(x => x.Back, 10, 500, htmlAttributes: new { style = "max-width: 100%;" })
+                <span asp-validation-for="Back" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <p>Upload image files:</p>
+                @Html.TextBoxFor(m => m.ImageFiles, new { type = "file" })
+                @Html.ValidationMessageFor(m => m.ImageFiles)
+                <img id="blah" src="#" width="100" height="100" alt="your image" />
+            </div>
             <div class="form-group">
                 <label asp-for="Level" class="control-label"></label>
                 <select asp-for="Level" asp-items="Html.GetEnumSelectList<AnkiFlashCards.Models.Domain.DifficultyLevel>()"></select>
@@ -39,7 +46,7 @@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
-        </form>
+        }
     </div>
 </div>
 
