--- a/RikkiFlashCards/Views/Card/Create.cshtml
+++ b/RikkiFlashCards/Views/Card/Create.cshtml
@@ -36,7 +36,8 @@
                 <p>Upload image files:</p>
                 @Html.TextBoxFor(m => m.ImageFiles, new { type = "file" })
                 @Html.ValidationMessageFor(m => m.ImageFiles)
-                <img id="blah" src="#" width="100" height="100" alt="your image" />
+                <div id="imageArea">
+                </div>
             </div>
             <div class="form-group">
                 <label asp-for="Level" class="control-label"></label>
