--- a/RikkiFlashCards/Views/Shared/_Layout.cshtml
+++ b/RikkiFlashCards/Views/Shared/_Layout.cshtml
@@ -26,6 +26,11 @@
     <!-- Template Main CSS File -->
     <link href="~/css/style.css" rel="stylesheet">
     <link href="~/css/MyStyleSheet.css" rel="stylesheet">
+    <!-- add to document <head> -->
+    <link href="https://unpkg.com/filepond/dist/filepond.css" rel="stylesheet">
+
+    <!-- add before </body> -->
+    <script src="https://unpkg.com/filepond/dist/filepond.js"></script>
 
     <!-- =======================================================
     * Template Name: Ninestars - v2.0.0
